Crash with zero divide when using skin modifier and numerical input scaling #47477

Closed
opened 2016-02-18 17:59:05 +01:00 by Satoshi Yamasaki · 5 comments

System Information
Windows 8.1Pro 64bit, nVidia GTX660

Blender Version
Broken: Blender 2.76b, 2.77 Testbuild 1

Short description of error
Blender crashed when using modifier and scaling with typing "1/0" in Mesh Edit Mode.

Exact steps for others to reproduce the error

  1. Add a cube or select it, and add a Skin modifier.
  2. Enter the Edit Mode.
  3. Select one or two vertices. (Don't select all)
  4. Press - key to scale them.
  5. Input following keys: - - [BackSpace]. Header prints like "Scale X:[1/(|)] = 1]...".
  6. Press - key. Blender will crash immediately.

I don't think it's rare case that such typing. I usually used scale tool with numerical input and pressed numpad 0 insted 1...;)

Thanks,

**System Information** Windows 8.1Pro 64bit, nVidia GTX660 **Blender Version** Broken: Blender 2.76b, 2.77 Testbuild 1 **Short description of error** Blender crashed when using modifier and scaling with typing "1/0" in Mesh Edit Mode. **Exact steps for others to reproduce the error** 1) Add a cube or select it, and add a Skin modifier. 2) Enter the Edit Mode. 3) Select one or two vertices. (Don't select all) 4) Press - [x] key to scale them. 5) Input following keys: - [x] - [x] [BackSpace]. Header prints like "Scale X:[1/(|)] = 1]...". 6) Press - [x] key. Blender will crash immediately. I don't think it's rare case that such typing. I usually used scale tool with numerical input and pressed numpad 0 insted 1...;) Thanks,
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @SatoshiYamasaki

Added subscriber: @SatoshiYamasaki

This issue was referenced by 1d15421af9

This issue was referenced by 1d15421af97980e4a149490fe31a325fed070853

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Thank you Campbell!

Thank you Campbell!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47477
No description provided.