Fix T47477: Transform allows 'inf' input

Numeric input wasn't checking numbers were finite,
could crash transforming with skin modifier.